Assignment2_Zhao_Duo/tests/automated/tests/bad/LoneIllegalChars.calc
read _
write %
test $
_
%
$
